tests/errors/test_40.xpp
// Enum declared with duplicate fields

enum Foo { A, A, B }

fn main() void {}
